# Accelerate

./: .gitignore  Cargo.toml  LICENSE.md  README.md  go.mod  index.html  mix.exs  pom.xml
.github/workflows/: codeql-analysis.yml  devskim-analysis.yml  ossar-analysis.yml  shiftleft-analysis.yml
accelerate/: Cargo.toml
accelerate/api/: pom.xml
accelerate/api/hibernate/: Main.java  hibernate.cfg.xml
accelerate/api/src/main/java/net/elixirpoint/accelerate/: Accelerate.kt  CallGroovy.java  Engine.java  EngineInterface.groovy  GroovyRun.java  GroovyRunner.groovy  HelloWorld.scala  Main.java
accelerate/api/src/main/scala/net/elixirpoint/accelerate/: HelloWorld.scala  ScalaRunner.scala
accelerate/java/: pom.xml
accelerate/java/hibernate/: Main.java
accelerate/java/src/main/java/net/elixirpoint/accelerate/: Accelerate.java  Accelerate.kt  Engine.java  GroovyRun.java  Main.java  Runner.java  engine.groovy  hello_world.groovy
accelerate/python-api/: __init__.py
accelerate/src/: Main.java
accelerate/src/python/: __init__.py
lib/: accelerate.ex
src/: main.rs
test/: accelerate_test.exs
web/: index.jsp
web/WEB-INF/: applicationContext.xml  web.xml
